--- a/demo/index.css
+++ b/demo/index.css
@@ -1,4 +1,5 @@
 .content winter-audio-player {
-    max-width: 60%;
-    margin: 0.25rem auto;
+    width: 640px;
+    max-width: 80%;
+    margin: 2em auto;
 }
