--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,9 +4,6 @@
     Full text available at: https://opensource.org/licenses/MIT
 */
 
-@import url("./reset.css");
-@import url("./fonts.css");
-@import url("./globals.css");
-@import url("./layout.css");
-@import url("./nav.css");
-@import url("./content.css");
+body {
+    font-family: Nunito;
+}
