--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,8 @@
 
 @import url("./reset.css");
 @import url("./fonts.css");
+@import url("./colors.css");
+@import url("./tokens.css");
 @import url("./globals.css");
 @import url("./layout.css");
 @import url("./nav.css");
