Move admonitions to their own file

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,4 +12,4 @@
 @import url("./layout.css");
 @import url("./nav.css");
 @import url("./content.css");
-@import url("./extensions.css");
+@import url("./admonitions.css");
