Add footnotes and hr

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,4 +13,5 @@
 @import url("./nav.css");
 @import url("./content.css");
 @import url("./admonitions.css");
+@import url("./footnotes.css");
 @import url("./components.css");
