--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -7,9 +7,6 @@
 /* Root elements */
 
 html {
-}
-
-body {
     font-family: var(--winter-font-serif);
     font-size: var(--winter-font-size-base);
     font-weight: var(--winter-font-weight-normal);
@@ -18,6 +15,9 @@ body {
     -moz-osx-font-smoothing: grayscale;
     letter-spacing: var(--winter-letter-spacing-normal);
     line-height: var(--winter-line-height-normal);
+}
+
+body {
     color: var(--winter-fg);
     background: var(--winter-bg);
 }
@@ -184,6 +184,9 @@ figcaption {
 }
 
 hr {
+    display: flow-root;
+    border: none;
+    border-bottom: var(--winter-hr-border);
 }
 
 dl {
