--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,4 +14,5 @@
 @import url("./content.css");
 @import url("./admonitions.css");
 @import url("./footnotes.css");
+@import url("./keys.css");
 @import url("./components.css");
